Bug 400568 - Keyboard Back/Forward keys sending VK_BROWSER_BACK/FORWARD go back/forward twice, r=emaijala, sr=ocallahan